Proxy.UI/src/styles.css
html, body { 
  height: 100%; 
  margin: 0; 
  font-family: Roboto, "Helvetica Neue", sans-serif; 
  background-color: #f5f5f5;
}

.sidenav-container {
  height: 100vh;
}

.sidenav {
  width: 200px;
  --mat-sidenav-container-width: 200px;
  display: flex;
  flex-direction: column;
}

.spacer {
  flex: 1 1 auto;
}

.content-padding {
  padding: 20px;
}


.full-width {
  width: 100%;
}

